force-app/main/default/objects/Settling_Parties__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent liability of liable party. To be populated by flow when liable party is added to a settling party</description>
    <inlineHelpText>Parent liability of the liable party</inlineHelpText>
    <label>Liability</label>
    <referenceTo>Liability__c</referenceTo>
    <relationshipLabel>Settling Parties</relationshipLabel>
    <relationshipName>Settling_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>