force-app/main/default/objects/Settling_Parties__c/fields/Parent_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assessment that holds the liability and the case issues for this party</inlineHelpText>
    <label>Parent Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Settling Parties</relationshipLabel>
    <relationshipName>Settling_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>