force-app/main/default/objects/Settling_Parties__c/fields/Proportionate_Interest_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Interest_Assessed__c</fullName>
    <formula>Liable_Party__r.Proportionate_Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Interest amount assessed to this party</inlineHelpText>
    <label>Proportionate Interest Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>